[project]
name = "mergetrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb==1.5.2",
    "narwhals==2.20.0",
    "numpy==2.4.4",
    "packaging==26.2",
    "pandas==3.0.2",
    "kaleido",
    "plotly==6.7.0",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "tzdata==2026.2",
]
